--- a/templates/potions/potions-details.html
+++ b/templates/potions/potions-details.html
@@ -8,8 +8,8 @@
 {% block content %}
 
 <div class="container">
-    <h1>📖 The Secret Grimoire</h1>
-    <h2 >Ancient recipes hidden within the cauldron's memory</h2>
+    <h1>The Secret Grimoire of Potions</h1>
+    <h2>Ancient recipes hidden within the cauldron's memory</h2>
 
     <div class="potions-grid">
         {% for potion in potions %}
