--- a/static/catalog/table.css
+++ b/static/catalog/table.css
@@ -1,4 +1,13 @@
+.buttons-for-books {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    padding-bottom: 2em;
+}
 
+.buttons-for-books .filter-form {
+    margin: 0;
+}
 
 .table-container {
     max-width: 1200px;
