--- a/templates/403.html
+++ b/templates/403.html
@@ -1,18 +1,14 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>403 - Forbidden</title>
-    <link rel="stylesheet" href="{% static '404.css' %}">
-</head>
-<body>
-    <div class="container">
-        <div class="error-code">403</div>
-        <p class="message">You don't have permission to access this page.</p>
-        <a href="{% url 'home' %}">Go back home</a>
-    </div>
+{% block css %}
+<link rel="stylesheet" href="{% static '404.css' %}">
+{% endblock %}
 
-
-</body>
-</html>
-
+{% block content %}
+<div class="container">
+    <div class="error-code">403</div>
+    <p class="message">You don't have permission to access this page.</p>
+    <p class="message">You need to be admin!</p>
+    <a href="{% url 'home' %}"><button>Go back home</button></a>
+</div>
+{% endblock %}
