--- a/static/potions/secret-potions.css
+++ b/static/potions/secret-potions.css
@@ -66,3 +66,9 @@ h2:hover {
         0 0 80px rgba(255, 140, 0, 0.8);
 }
 
+.card-icon .icon-gif {
+    width: 60px;
+    height: 60px;
+    display: block;
+    margin: 0 auto;
+}
