fix potions issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
 
         <nav>
             <ul>
-                <li><a href="{% url 'all_books' %}">My Magic library</a></li> {# list of all the books #}
-                <li><a href="{% url 'create_potion' %}">Magic Potions</a></li> {# making magic potions #}
-                <li><a href="{% url 'display-dragons' %}">Match a Dragon</a></li> {# random matchmaking #}
-                <li><a href="{% url 'grimoire_list' %}">Grimoire</a></li> {# blog #}
+                <li><a href="{% url 'all_books' %}">My Magic library</a></li>
+                <li><a href="{% url 'create_potion' %}">Magic Potions</a></li>
+                <li><a href="{% url 'display-dragons' %}">Match a Dragon</a></li>
+                <li><a href="{% url 'grimoire_list' %}">Grimoire</a></li>
                 <li><a href="{% url 'create_user' %}">Create Wizard</a></li>
             </ul>
         </nav>
