--- a/templates/dragons/display-page.html
+++ b/templates/dragons/display-page.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block css %}<link rel="stylesheet" href="{% static 'dragons/dragons-display.css' %}">{% endblock %}
+{% block css %}<link rel="stylesheet" href="{% static 'dragons/css/dragons-display.css' %}">{% endblock %}
 
 {% block content %}
 
