--- a/static/grimoire/grimoire.css
+++ b/static/grimoire/grimoire.css
@@ -30,6 +30,10 @@
     font-family: "Macondo", cursive;
 }
 
-button{
+.box-details select option {
+    background-color: #1a1828;
+    color: #f4e4c1;
+}
+.box-details button {
     margin-top: 1.5em;
 }
